k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-app
  labels:
    name: weather-app
    app: weather-microservices
